--- a/index.html
+++ b/index.html
@@ -313,13 +313,9 @@
     <!-- Page content -->
     <main>
         
-        <h1>Welcome to my website!</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod, lacus a tincidunt accumsan, dui purus
-            elementum urna, vel luctus lacus velit a erat. Aliquam auctor diam non libero tincidunt, id porttitor ipsum
-            cursus. Aenean hendrerit consectetur erat, sit amet sollicitudin tortor tempus non. Sed vel velit vel nisl
-            volutpat semper. Vestibulum at magna porttitor, volutpat nulla id, congue enim. Morbi non luctus tortor. In
-            hac habitasse platea dictumst. Ut placerat ligula ac magna pharetra vehicula. Aliquam laoreet, leo at
-            fermentum pellentesque, lacus quam elementum ante, quis rutrum lectus tortor quis nisi.</p>
+       <h1>Welcome to the Sure Key App</h1>
+        <p>This is the official application of Sure Key Education Services. Please use it to explore our products and services.</p>
+
         
     </main>
 
